feat: tournament participant service & controller
